# MxAPI

./: .gitignore  README.md  mrapi_abb.h  mrapi_impl_spec_sem_abb.c  mrapi_implt_sem_abb.cpp  mrapi_sem_abb.c
mca-2.0.3/: Makefile.am  Makefile.in  Makefile_abb.am  Makefile_abb.in  configure  configure_abb  mca.h  mca_abb.h  mca_build.bat  mca_config.h  mca_config_abb.h  mca_config_abb.h.in  mca_impl_spec.h  mca_impl_spec_abb.h
mca-2.0.3/Fragments/: mca_impl_spec_def.h  mca_impl_spec_def_abb.h  mca_impl_spec_inc.h  mca_impl_spec_inc_abb.h  mca_inc.h  mca_inc_abb.h
mca-2.0.3/common/: common.cbp  common.depend  common.layout  common.sln  common.vcxproj  common.vcxproj.filters  common.workspace  common_abb.cbp  common_abb.depend  common_abb.layout  common_abb.vcxproj  common_abb.vcxproj.filters  common_build.bat  commont_abb.cpp  commont_abb.vcxproj  commont_abb.vcxproj.filters  mca_utils.c  mca_utils.h  mca_utils_abb.c  mca_utils_abb.h  stdafx.cpp
mca-2.0.3/common/Fragments/: commont_crc.cpp  commont_inc_abb.cpp  mca_utils_impl.c  mca_utils_impl_abb.c  mca_utils_inc.c  mca_utils_inc.h  mca_utils_inc_abb.c  mca_utils_inc_abb.h  mca_utils_proto.h  mca_utils_proto_abb.h
mca-2.0.3/conker/scripts/: Makefile.am  echo_log_template.txt  fury_log_template.txt  log_file_template.txt
mca-2.0.3/mcapi/: README.md  mcapi.cbp  mcapi.layout  mcapi.sln  mcapi.vcxproj  mcapi.vcxproj.filters  mcapi_abb.cbp  mcapi_abb.vcxproj  mcapi_abb.vcxproj.filters  mcapi_build.bat  stdafx.cpp
mca-2.0.3/mcapi/doc/: mcapi_abbV2000_100310.xml  pdfsam_mcapiV2000_100310_11.docx  pdfsam_mcapiV2000_100310_13.docx  pdfsam_mcapiV2000_100310_21.docx  pdfsam_mcapiV2000_100310_38.docx  pdfsam_mcapiV2000_100310_39.1.docx  pdfsam_mcapiV2000_100310_39.2.docx  pdfsam_mcapiV2000_100310_39.3.docx  pdfsam_mcapiV2000_100310_39.4.docx  pdfsam_mcapiV2000_100310_39.5.docx  pdfsam_mcapiV2000_100310_39.6.docx  pdfsam_mcapiV2000_100310_39.docx  pdfsam_mcapiV2000_100310_40.docx  pdfsam_mcapiV2000_100310_51.docx
mca-2.0.3/mcapi/include/: mcapi.h  mcapi_abb.h  mcapi_abl.h  mcapi_trans.h  mcapi_trans_abb.h  mcapi_trans_abl.h
mca-2.0.3/mcapi/scripts/: Makefile.am
mca-2.0.3/mcapi/src/: mcapi.c  mcapi_abb.c
mca-2.0.3/mrapi/: README  README.md  mrapi.cbp  mrapi.layout  mrapi.sln  mrapi.vcxproj  mrapi.vcxproj.filters  mrapi.workspace  mrapi_abb.cbp  mrapi_abb.depend  mrapi_abb.layout  mrapi_abb.vcxproj  mrapi_abb.vcxproj.filters  mrapi_build.bat  stdafx.cpp
mca-2.0.3/mrapi/doc/: pdfsam_mrapiV0.9.3.4_110.1.docx  pdfsam_mrapiV0.9.3.4_110.10.docx  pdfsam_mrapiV0.9.3.4_110.11.docx  pdfsam_mrapiV0.9.3.4_110.12.docx  pdfsam_mrapiV0.9.3.4_110.13.docx  (+22 more)
mca-2.0.3/mtapi/: README.md
mca-rs/common/: Cargo.toml
mca-rs/mrapi/: Cargo.toml  MRAPI_SHMEM
mca-rs/mrapi/src/: lib.rs
mca-rs/mrapi/src/internal/: db.rs  lifecycle.rs
mca-rs/mrapi/src/internal/db/: unix.rs
mca-rs/mrapi/src/sysvr4/: key.rs  os.rs  sem.rs  shmem.rs
mca-rs/sysvr4/: Cargo.toml
mca-rs/sysvr4/backup/: lib.rs  unix.rs  windows.rs
mca-rs/sysvr4/src/: lib.rs  os.rs  unix.rs  windows.rs
mca-rust/common/: Cargo.toml
mxml-2.12/doc/: mxml.man
mxml-2.12/vcnet/: mxml.sln
(+508 files in other folders)
