[package]
name = "mrapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common", version = "0.1.0" }
more-asserts = "0.3.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
late-static = "0.4.0"
heliograph = "0.1.0"
