[package]
name = "mrapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
common = { path = "../common", version = "0.1.0" }
sysvr4 = { path = "../sysvr4", version = "0.1.0" }
more-asserts = "0.3.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
late-static = "0.4.0"
heliograph = "0.1.0"
fragile = "1.2.1"
thread-id = "4.0.0"
bitfield = "0.14.0"
atomig = { version = "0.4.0", features = ["derive"] }
once_cell = "1.17.0"
nix = "0.25.0"

[target.'cfg(unix)'.dependencies]
