[package]
name = "sysvr4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
common = { path = "../common", version = "0.1.0" }
more-asserts = "0.3.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
late-static = "0.4.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.135"
errno = "0.2.8"
nix = "0.23"
nc = "0.8"
thread-id = "4.0.0"
syscalls = "0.6.7"

[target.'cfg(windows)'.dependencies]
win-sys = "0.3"

[dependencies.windows-sys]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
